test/libsolidity/syntaxTests/storageLayoutSpecifier/array_literal.sol
contract C layout at [1, 2, 3] {}
// ----
// TypeError 6396: (21-30): The base slot of the storage layout must evaluate to a rational number.
